# django-data-wizard

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  babel.config.js  install_editable.sh  package-lock.json  package.json  pyproject.toml  runserver.sh  runtests.sh  set_dev_version.sh  setup.py
.github/workflows/: pages.yml  test.yml
data_wizard/: __init__.py  admin.py  apps.py  compat.py  fields.py  idmap.py  loaders.py  models.py  registry.py  rest.py  serializers.py  settings.py  signals.py  tasks.py  test.py  urls.py  views.py
data_wizard/backends/: __init__.py  base.py  celery.py  immediate.py  threading.py
data_wizard/migrations/: 0001_initial.py  0002_auto_20190305_2351.py  0002_auto_20190306_2022.py  0003_alter_run_options.py
data_wizard/mustache/: run_auto.html  run_columns.html  run_data.html  run_detail.html  run_ids.html  run_list.html  run_records.html  run_serializers.html
data_wizard/sources/: __init__.py  admin.py  apps.py  models.py  rest.py  wizard.py
data_wizard/static/: srchash.txt
dbio/: admin.py  models.py  proxy_models.py  rest.py  signals.py  tasks.py  views.py
dbio/migrations/: 0001_initial.py
dbio/south_migrations/: 0001_initial.py
docs/: CNAME  index.md  license.md  packages.md  support.md
docs/@wq/: index.md  progress-element.md  progress.md  wizard.md
docs/_layouts/: default.html
docs/api/: admin.md  auto.md  cli.md  columns.md  create.md  data.md  ids.md  index.md  list.md  records.md  serializers.md  status.md  updatecolumns.md  updateids.md  updateserializer.md
docs/config/: backends.md  index.md  models.md  serializers.md  settings.md  sources.md  tasks.md
docs/guides/: debugging.md  integrate-with-wq-framework.md  using-django-data-wizard.md
docs/itertable/: base.md  custom.md  gis.md  index.md  loaders.md  mappers.md  parsers.md
docs/js/: $index.js  maplibre-gl.js
docs/overview/: setup.md
docs/releases/: django-data-wizard-1.0.0.md  django-data-wizard-1.0.0b1.md  django-data-wizard-1.0.0b2.md  django-data-wizard-1.0.0rc1.md  django-data-wizard-1.0.1.md  django-data-wizard-1.1.0.md  django-data-wizard-1.2.0.md  index.md  (+23 more)
qual/: admin.py  models.py
tests/: __init__.py  base.py  celery.py  settings.py  swap_settings.py  talldata.csv  test_cli.py  test_custom_workflow.py  test_dbio.py  test_eav.py  test_foreignkey.py  test_metaheader.py  test_naturalkey.py  test_numbers.py  test_simple_import.py  test_swap.py  test_vera.py  test_vera_import.py  test_wqdb.py  urls.py
vera/: admin.py  compat.py  models.py  rest.py  serializers.py  views.py
(+91 files in other folders)
