[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "backend"
backend-path = ["packages"]

[project]
name = "data-wizard"
dynamic = ["version"]
authors = [
    {name = "S. Andrew Sheppard", email = "andrew@wq.io"},
]
description = "Interactive web-based wizard for importing structured data into Django models."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "djangorestframework",
    "itertable>=2.1.0",
    "natural-keys",
    "html-json-forms",
    "python-dateutil",
]

[project.urls]
Homepage = "https://django-data-wizard.wq.io/"
Documentation = "https://django-data-wizard.wq.io/"
Source = "https://github.com/wq/django-data-wizard"
"Release Notes" = "https://django-data-wizard.wq.io/releases/"
Issues = "https://github.com/wq/django-data-wizard/issues"
CI = "https://github.com/wq/django-data-wizard/actions/workflows/test.yml"

[tool.setuptools]
packages = [
    "data_wizard",
    "data_wizard.backends",
    "data_wizard.management",
    "data_wizard.management.commands",
    "data_wizard.migrations",
    "data_wizard.sources",
    "data_wizard.sources.migrations",
]

[tool.setuptools_scm]
